fixed gulp build img task, fixed product description overflow

--- a/src/common/scss/common.scss
+++ b/src/common/scss/common.scss
@@ -257,16 +257,6 @@ body {
         padding: 0 20px;
         font-size: 18px;
       }
-
-      @media screen and (min-width: 1024px) and (max-width: 1650px) {
-        height: 40px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-
-        &:hover {
-          overflow: auto;
-        }
-      }
     }
   }
 
